--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "vinxi start",
+    "dev": "vinxi dev",
+    "format": "prettier --write '**/*' --ignore-unknown",
     "lint": "prettier --check '**/*' --ignore-unknown && eslint --ext .ts,.tsx ./app",
-    "format": "prettier --write '**/*' --ignore-unknown"
+    "start": "vinxi start"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "redaxios": "^0.5.1",
+    "sst": "3.1.30",
     "tailwind-merge": "^2.5.2",
     "tiny-invariant": "^1.3.3",
     "vinxi": "0.4.3",
@@ -41,5 +42,8 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.5",
     "vite-tsconfig-paths": "^5.0.1"
+  },
+  "overrides": {
+    "nitropack": "npm:nitropack-nightly@latest"
   }
 }
