--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
     "@tanstack/start": "^1.58.5",
     "isbot": "^5.1.17",
     "ky": "^1.7.2",
-    "msw": "^2.4.7",
+    "msw": "^2.4.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "redaxios": "^0.5.1",
-    "sst": "3.1.30",
+    "sst": "^3.1.32",
     "tailwind-merge": "^2.5.2",
     "tiny-invariant": "^1.3.3",
     "vinxi": "0.4.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.21",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
-    "vite": "^5.4.5",
+    "vite": "^5.4.7",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "overrides": {
